--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,31 +1,32 @@
-.header{
+.header {
     margin-top: 60px;
-}
-
-.headerTitles{
+  }
+  
+  .headerTitles {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Lora',serif;
-    color:#444;
-}
-
-.headerTitlesSm{
+    font-family: "Lora", serif;
+    color: #444;
+  }
+  
+  .headerTitleSm {
     position: absolute;
-    top: 18%;
+    top: 4%;
     font-size: 20px;
-}
-
-.headerTitlesLg{
+    font-family: 'Lora', sans-serif;
+  }
+  
+  .headerTitleLg {
     position: absolute;
-    top: 20%;
+    top: 5%;
     font-size: 100px;
-    
-}
-
-.headerImg{
+    font-family:'Lora',sans-serif;
+  }
+  
+  .headerImg {
     width: 100%;
     height: 450px;
     margin-top: 80px;
     object-fit: cover;
-}
+  }
